# Nani

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: nani_cmake.cmake
nani/: CMakeLists.txt  global_defs.h
nani/canvas/: CMakeLists.txt  cursor.cpp  cursor.h  defs.h  env.cpp  env.h  event.cpp  event.h  screen.cpp  screen.h  styles.cpp  styles.h  window.cpp  window.h
nani/canvas/basic/: basic_defs.h  color.cpp  color.h  geometry_defs.h  marginsf.cpp  marginsf.h  pointf.cpp  pointf.h  polygonf.cpp  polygonf.h  rectf.cpp  rectf.h  sizef.cpp  sizef.h  transformf.cpp  transformf.h
nani/canvas/elements/: element.cpp  element.h  element_states.cpp  element_states.h  element_visibility.cpp  element_visibility.h  elements_defs.h  elements_layer.cpp  elements_layer.h  properties.cpp  properties.h  styles.cpp  styles.h
nani/canvas/events/: event.cpp  event.h  event_defs.h  event_filter.cpp  event_filter.h  event_target.cpp  event_target.h  target_ptr.hpp
nani/canvas/internal/: computed_style.cpp  computed_style.h  computed_style_builder.cpp  computed_style_builder.h  env_p.cpp  env_p.h  font_manager_p.cpp  font_manager_p.h  font_metrics_p.cpp  font_metrics_p.h  platform.cpp  platform.h  skia_utils.cpp  skia_utils.h  window_p.cpp  window_p.h  yoga_utils.cpp  yoga_utils.h
nani/canvas/internal/assets/: Styles.xml  StylesStateInherit.xml
nani/canvas/text/: font.cpp  font.h  font_manager.cpp  font_manager.h  font_metrics.cpp  font_metrics.h  text_decoration.cpp  text_decoration.h  text_defs.h
nani/canvas/visuals/: view.cpp  view.h  visual.cpp  visual.h  visuals_defs.h
nani/runtime/: CMakeLists.txt  defs.h  directory.cpp  directory.h  file_dialog.cpp  file_dialog.h
nani/snippets/: CMakeLists.txt
nani/snippets/canvas/: CMakeLists.txt  main.cpp
nani/snippets/runtime/: CMakeLists.txt  main.cpp
nani/utests/: CMakeLists.txt
nani/utests/canvas/: CMakeLists.txt  defs.h  main.cpp  test_color.cpp  test_element_states.cpp  test_elements.cpp  test_elements_layer.cpp  test_event.cpp  test_event_target.cpp  test_font.cpp  test_geometry.cpp  test_polygonf.cpp  test_styles.cpp  test_text_decoration.cpp  test_transformf.cpp  test_view.cpp  test_window.cpp
nani/utests/runtime/: CMakeLists.txt  test_directory.cpp
